# C-.Faculty.ProductApp

./: CMakeLists.txt  CodeException.h  CodeValidator.cpp  CodeValidator.h  Colectie.cpp  Colectie.h  Entitate.cpp  Entitate.h  EntitateRepo.cpp  EntitateRepo.h  EntitateService.cpp  EntitateService.h  FileRepo.cpp  FileRepo.h  NumeValidator.cpp  NumeValidator.h  PretValidator.cpp  PretValidator.h  README.md  UI.cpp  UI.h  labf.cbp  labf.depend  labf.layout  main.cpp  testEntitate.cpp  testEntitate.h  testeRepo.cpp  testeRepo.h  testeService.cpp  testeService.h
