cmake_minimum_required(VERSION 3.25)
project(C___FinalLab)

set(CMAKE_CXX_STANDARD 17)

add_executable(C___FinalLab main.cpp CodeException.h CodeValidator.cpp CodeValidator.h Colectie.cpp Colectie.h Entitate.cpp Entitate.h EntitateRepo.cpp EntitateRepo.h EntitateService.cpp EntitateService.h FileRepo.cpp FileRepo.h NumeValidator.cpp NumeValidator.h PretValidator.cpp PretValidator.h testEntitate.cpp testEntitate.h testeRepo.cpp testeRepo.h testeService.cpp testeService.h UI.cpp UI.h)
